tests/valid/teste_printf.lang
//Printf 

int a = 7;
printf(a);
printf(a + 3);
