tests/invalid/teste_sintatico.lang
//Erro sintático 

int a = ;
